--- a/index.html
+++ b/index.html
@@ -1,10 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
-         <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-   </head>
-<body>Hello!
+    <title>Сучасна пекарня</title>
+</head>
+<body>
+    <header>
+    <nav>
+        <a href="#">
+    <img src="./images/logo.svg" alt="Логотип сучасної пекарні"/>
+    </a>
+    <ul>
+    <li><a href="#" target="_blank">Франшиза</a></li>
+    <li><a href="#"></a>Наші традиціЇ</a></li>
+    <li><a href="#"></a>Формати</a></li>
+    <li><a href="#"></a>Контакти</a></li>
+    </ul>
+    </nav>
+    <button type="button">замовити дзвінок</button>
+</header>
+<main>
+    <Section>
+        <h1>Сучасна пекарня</h1>
+    </Section>
+    <Section>
+        <ul>
+        <li>Великий попит на ринку</li>
+        <li>Доступні за бюджетом формати</li>
+        <li>Досвітчена управлінська команда</li>
+    </ul>
+        <H2>Новий формат традицій</H2>
+        <p>
+        <span>shop bakery</span> - це пекарня, яка взяла все найкраще, і зберегла смак традиційноЇ випічки та натуральність інградієнтів.
+        </p>
+        <p>Ми працюємо як найвідоміші мережі -
+             <span>5 хвилин і замовлення готове</span>. А ще у наших пекарень стильний дизайн та висока якість обслуговування
+        </p>
+        <img src="./images/baker-man.jpg" alt="Чоловік пекар дивиться на батони із посмішкою"
+    </Section>
+    <Section>
+        <H2>Наші найкращі шеф-кухарі</H2>
+        <ul>
+            <li><article>
+                <H3>Настя</H3>
+                <p>Привіт, я Настя!</p>
+                <p>Вже 10 років, я втілюю у життя цікаві та смачні ідеЇ.</p>
+                <p>Я випечу для Вас найсмачніші вироби</p>
+            </article></li>
+            <li><article>
+                <H3>Влад</H3>
+                <P>Привіт, я Влад!</P>
+                <P>Мій кондитерський стаж вже 10 років. SHOP BEKERY - Це наша любов, зщ якою ми ділимось кожен раз з вами через нашу
+                    випічку</P>
+                <P>Я зроблю для вас унікальну начинку на будь який смак!</P>
+            </article></li>
+        </ul>
+       
+        
+    </Section>
+    <Section>
+        <H2>Формати</H2>
+        <ul><li><article>
+            <H3 lang="en">Walrus</H3>
+        </article></li>
+        <li><article>
+            <H3 lang="en">Horseshoe</H3>
+        </article></li>
+        <li><article>
+            <H3 lang="en">Handlebar</H3>
+        </article></li>
+</ul>
+    </Section>
+    <Section>
+        <H2>Приєднуйся до мережі пекарень</H2>
+    </Section>
+</main>
+<footer>
+<nav>
+<a href="#">
+    <img src="./images/logo.svg" alt="Логотип сучасної пекарні" />
+</a>
+<ul>
+<li><a href="#" target="_blank">Франшиза</a></li>
+<li><a href="#"></a>Наші традиціЇ</a></li>
+<li><a href="#"></a>Формати</a></li>
+<li><a href="#"></a>Контакти</a></li>
+</ul>
+</nav>
+<address>
+    <ul>
+        <li><a href="tel:+380960000007">+38(096)0000007</a></li>
+        <li><a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a></li>
+        <li><a href="https://maps.app.goo.gl/xGmiZQGsuYZssMVt7" target="_blank">Україна, м.Київ, вул. Січових Стрільців 54</a></li>
+<li><a href="#">
+    <!--facebook icon-->
+</a></li>
+<li><a href="#">
+        <!--instagram icon-->
+    </a></li>
+    </ul>
+    <a href="#" target="_blank">Політика конфіденційності</a>
+    <p>2022  Дані захищені</p>
+</address>
+</footer>
 </body>
 </html>
